        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=32905
        With Pinyin Simplified IM, a wrong character is deleted from google.com suggestion

        Test: platform/mac/editing/input/selection-change-closes-typing.html

        * editing/Editor.cpp: (WebCore::Editor::confirmComposition): If this function wasn't allowed
        to change selection, it needs to close the current typing command - otherwise, its idea of
        selection would be used for future typing.



Canonical link: https://commits.webkit.org/43955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52542 268f45cc-cd09-0410-ab3c-d52691b4dbfc